--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
       <!-- styles -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-        <link href="./main.css" rel="stylesheet">
-        <link href="./style.css" rel="stylesheet">
+        <!-- <link href="./css/main.css" rel="stylesheet"> -->
+        <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- page of our projects -->
@@ -33,6 +33,7 @@
     <main>
         <!-- filter of projects -->
         <section class="filter">
+            <h2 class="do-not-show">Выбор типа проекта</h2>
             <ul>
                 <li><button class="filter-button" type="button">Все</button></li>
                 <li><button class="filter-button" type="button">Веб-сайты</button></li>
@@ -42,6 +43,7 @@
             </ul>
         </section>
         <section>
+            <h2 class="do-not-show">Список проектов</h2>
             <!-- list of projects -->
             <ul>
                 <li>
