--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
       <!-- styles -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-        <link href="./main.css" rel="stylesheet">
-        <link href="./style.css" rel="stylesheet">
+        <!-- <link href="./css/main.css" rel="stylesheet"> -->
+        <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- main page of project -->
@@ -34,10 +34,11 @@
         <!-- Hero -->
         <section>
             <h1>Эффективные решения<br> для вашего бизнеса</h1>
-            <button class="order" type="button" width="200" height="50">Заказать услугу</button>
+            <button class="order" type="button">Заказать услугу</button>
         </section>
         <!-- our advantages -->
         <section class="advantages">
+            <div></div>
             <ul>
                 <li>
                     <h3 class="advantages-item">Внимание к деталям</h3>
